--- a/.github/workflows/rdisc-runner.yml
+++ b/.github/workflows/rdisc-runner.yml
@@ -16,9 +16,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Configure Virtual Machines
-      run: python3 tests/vm_tests/configure_VMs.py
+      run: python3 tests/configure_VMs.py
     - name: Run router solicitation test
-      run: python3 tests/vm_tests/router_solicit.py
+      run: python3 tests/router_solicit.py
     - name: Run router advertisement test
-      run: python3 tests/vm_tests/router_advert.py    
+      run: python3 tests/router_advert.py    
    
